--- a/pom.xml
+++ b/pom.xml
@@ -1,4 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>br.com.objectos</groupId>
 	<artifactId>objectos-comuns-parent</artifactId>
@@ -6,11 +7,10 @@
 	<name>objectos comuns-parent</name>
 	<version>2.0.1-SNAPSHOT</version>
 	<scm>
-		<connection>scm:git:git@github.com:objectos/objectos-comuns-parent.git</connection>
+		<connection>scm:git:git://objectos/objectos-comuns-parent.git</connection>
 		<developerConnection>scm:git:git@github.com:objectos/objectos-comuns-parent.git</developerConnection>
 	</scm>
 	<properties>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<eclipse.lifecycle-mapping.version>1.0.0</eclipse.lifecycle-mapping.version>
 		<google.guava.version>r09</google.guava.version>
 		<google.guice.version>3.0</google.guice.version>
@@ -24,16 +24,18 @@
 		<maven.compiler.version>2.3.2</maven.compiler.version>
 		<maven.enforcer.version>1.0.1</maven.enforcer.version>
 		<maven.jar.version>2.3.1</maven.jar.version>
+		<maven.release.version>2.2.1</maven.release.version>
 		<maven.source.version>2.1.2</maven.source.version>
 		<maven.surefire.version>2.8.1</maven.surefire.version>
 		<net.sf.ehcache.version>2.2.0</net.sf.ehcache.version>
 		<org.hamcrest.version>1.3.RC2</org.hamcrest.version>
 		<org.slf4j.version>1.6.1</org.slf4j.version>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<testng.version>6.0.1</testng.version>
 	</properties>
 	<profiles>
 		<profile>
-			<id>hudson</id>
+			<id>jenkins</id>
 			<activation>
 				<property>
 					<name>BUILD_NUMBER</name>
@@ -41,14 +43,14 @@
 			</activation>
 			<distributionManagement>
 				<repository>
-					<id>releases</id>
-					<name>Internal Releases</name>
-					<url>http://rio.objectos.com.br/nexus/content/repositories/releases</url>
+					<id>objectos-releases</id>
+					<name>objectos Repo</name>
+					<url>${objectos.releases.url}</url>
 				</repository>
 				<snapshotRepository>
-					<id>snapshots</id>
-					<name>Internal Snapshots</name>
-					<url>http://rio.objectos.com.br/nexus/content/repositories/snapshots</url>
+					<id>objectos-snapshots</id>
+					<name>objectos Snapshots</name>
+					<url>${objectos.snapshots.url}</url>
 				</snapshotRepository>
 			</distributionManagement>
 			<build>
@@ -164,6 +166,11 @@
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-jar-plugin</artifactId>
 					<version>${maven.jar.version}</version>
+				</plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-release-plugin</artifactId>
+					<version>${maven.release.version}</version>
 				</plugin>
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
@@ -288,6 +295,14 @@
 						</goals>
 					</execution>
 				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-release-plugin</artifactId>
+				<configuration>
+					<releaseProfiles>jenkins</releaseProfiles>
+					<goals>deploy</goals>
+				</configuration>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
