--- a/pom.xml
+++ b/pom.xml
@@ -1,4 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>br.com.objectos</groupId>
 	<artifactId>objectos-comuns-parent</artifactId>
@@ -13,9 +14,11 @@
 		<eclipse.lifecycle-mapping.version>1.0.0</eclipse.lifecycle-mapping.version>
 		<google.guava.version>r09</google.guava.version>
 		<google.guice.version>3.0</google.guice.version>
+		<googlecode.flyway.version>1.4.2</googlecode.flyway.version>
 		<hibernate.core.version>3.6.6.Final</hibernate.core.version>
 		<hibernate.jpa2.version>1.0.1.Final</hibernate.jpa2.version>
 		<hibernate.validator.version>4.1.0.Final</hibernate.validator.version>
+		<jetty.version>6.1.26</jetty.version>
 		<joda-time.version>2.0</joda-time.version>
 		<joda-time-hibernate.version>1.3</joda-time-hibernate.version>
 		<logback.version>0.9.29</logback.version>
@@ -24,8 +27,12 @@
 		<maven.enforcer.version>1.0.1</maven.enforcer.version>
 		<maven.jar.version>2.3.1</maven.jar.version>
 		<maven.release.version>2.2.1</maven.release.version>
+		<maven.resources.version>2.5</maven.resources.version>
 		<maven.source.version>2.1.2</maven.source.version>
+		<maven.sql.version>1.5</maven.sql.version>
 		<maven.surefire.version>2.8.1</maven.surefire.version>
+		<maven.war.version>2.1.1</maven.war.version>
+		<mysql.connector.version>5.1.16</mysql.connector.version>
 		<net.sf.ehcache.version>2.2.0</net.sf.ehcache.version>
 		<org.hamcrest.version>1.3.RC2</org.hamcrest.version>
 		<org.slf4j.version>1.6.1</org.slf4j.version>
@@ -33,44 +40,6 @@
 		<testng.version>6.0.1</testng.version>
 	</properties>
 	<profiles>
-		<profile>
-			<id>jenkins</id>
-			<activation>
-				<property>
-					<name>BUILD_NUMBER</name>
-				</property>
-			</activation>
-			<distributionManagement>
-				<repository>
-					<id>objectos-releases</id>
-					<name>objectos Repo</name>
-					<url>${objectos.releases.url}</url>
-				</repository>
-				<snapshotRepository>
-					<id>objectos-snapshots</id>
-					<name>objectos Snapshots</name>
-					<url>${objectos.snapshots.url}</url>
-				</snapshotRepository>
-			</distributionManagement>
-			<build>
-				<plugins>
-					<!-- realiza o deploy dos arquivos fonte -->
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-source-plugin</artifactId>
-						<version>${maven.source.version}</version>
-						<executions>
-							<execution>
-								<goals>
-									<goal>jar</goal>
-									<goal>test-jar</goal>
-								</goals>
-							</execution>
-						</executions>
-					</plugin>
-				</plugins>
-			</build>
-		</profile>
 		<profile>
 			<id>cobertura</id>
 			<build>
@@ -147,10 +116,60 @@
 				</plugins>
 			</build>
 		</profile>
+		<profile>
+			<id>release</id>
+			<distributionManagement>
+				<repository>
+					<id>nexus-releases</id>
+					<name>nexus releases</name>
+					<url>${nexus.releases.url}</url>
+				</repository>
+				<snapshotRepository>
+					<id>nexus-snapshots</id>
+					<name>nexus snapshots</name>
+					<url>${nexus.snapshots.url}</url>
+				</snapshotRepository>
+			</distributionManagement>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-source-plugin</artifactId>
+						<version>${maven.source.version}</version>
+						<executions>
+							<execution>
+								<goals>
+									<goal>jar</goal>
+									<goal>test-jar</goal>
+								</goals>
+							</execution>
+						</executions>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
 	</profiles>
 	<build>
 		<pluginManagement>
 			<plugins>
+				<plugin>
+					<groupId>com.googlecode.flyway</groupId>
+					<artifactId>flyway-maven-plugin</artifactId>
+					<version>${googlecode.flyway.version}</version>
+					<configuration>
+						<driver>${jdbc.driver}</driver>
+						<url>${jdbc.url}</url>
+						<user>${jdbc.user}</user>
+						<password>${jdbc.password}</password>
+					</configuration>
+					<dependencies>
+						<dependency>
+							<groupId>mysql</groupId>
+							<artifactId>mysql-connector-java</artifactId>
+							<version>${mysql.connector.version}</version>
+						</dependency>
+					</dependencies>
+				</plugin>
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-compiler-plugin</artifactId>
@@ -173,8 +192,21 @@
 				</plugin>
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-resources-plugin</artifactId>
+					<version>${maven.resources.version}</version>
+					<configuration>
+						<encoding>UTF-8</encoding>
+					</configuration>
+				</plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-surefire-plugin</artifactId>
 					<version>${maven.surefire.version}</version>
+				</plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-war-plugin</artifactId>
+					<version>${maven.war.version}</version>
 				</plugin>
 				<plugin>
 					<groupId>org.codehaus.mojo</groupId>
@@ -213,6 +245,24 @@
 					</configuration>
 				</plugin>
 				<plugin>
+					<groupId>org.codehaus.mojo</groupId>
+					<artifactId>sql-maven-plugin</artifactId>
+					<version>${maven.sql.version}</version>
+					<configuration>
+						<driver>${jdbc.driver}</driver>
+						<url>${jdbc.url}</url>
+						<username>${jdbc.user}</username>
+						<password>${jdbc.password}</password>
+					</configuration>
+					<dependencies>
+						<dependency>
+							<groupId>mysql</groupId>
+							<artifactId>mysql-connector-java</artifactId>
+							<version>${mysql.connector.version}</version>
+						</dependency>
+					</dependencies>
+				</plugin>
+				<plugin>
 					<groupId>org.eclipse.m2e</groupId>
 					<artifactId>lifecycle-mapping</artifactId>
 					<version>${eclipse.lifecycle-mapping.version}</version>
@@ -223,7 +273,7 @@
 									<pluginExecutionFilter>
 										<groupId>org.apache.maven.plugins</groupId>
 										<artifactId>maven-enforcer-plugin</artifactId>
-										<versionRange>[1.0,)</versionRange>
+										<versionRange>[${maven.enforcer.version},)</versionRange>
 										<goals>
 											<goal>enforce</goal>
 										</goals>
@@ -244,6 +294,33 @@
 									</pluginExecutionFilter>
 									<action>
 										<ignore />
+									</action>
+								</pluginExecution>
+								<pluginExecution>
+									<pluginExecutionFilter>
+										<groupId>org.codehaus.mojo</groupId>
+										<artifactId>sql-maven-plugin</artifactId>
+										<versionRange>[${maven.sql.plugin},)</versionRange>
+										<goals>
+											<goal>execute</goal>
+										</goals>
+									</pluginExecutionFilter>
+									<action>
+										<ignore></ignore>
+									</action>
+								</pluginExecution>
+								<pluginExecution>
+									<pluginExecutionFilter>
+										<groupId>com.googlecode.flyway</groupId>
+										<artifactId>flyway-maven-plugin</artifactId>
+										<versionRange>[${googlecode.flyway.version},)</versionRange>
+										<goals>
+											<goal>init</goal>
+											<goal>migrate</goal>
+										</goals>
+									</pluginExecutionFilter>
+									<action>
+										<ignore></ignore>
 									</action>
 								</pluginExecution>
 							</pluginExecutions>
@@ -299,7 +376,7 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-release-plugin</artifactId>
 				<configuration>
-					<releaseProfiles>jenkins</releaseProfiles>
+					<releaseProfiles>release</releaseProfiles>
 					<goals>deploy</goals>
 				</configuration>
 			</plugin>
