--- a/pom.xml
+++ b/pom.xml
@@ -11,13 +11,13 @@
 	</scm>
 	<properties>
 		<eclipse.lifecycle-mapping.version>1.0.0</eclipse.lifecycle-mapping.version>
-		<google.guava.version>r09</google.guava.version>
+		<google.guava.version>10.0.1</google.guava.version>
 		<google.guice.version>3.0</google.guice.version>
 		<googlecode.flyway.version>1.4.2</googlecode.flyway.version>
 		<hibernate.core.version>3.6.6.Final</hibernate.core.version>
 		<hibernate.jpa2.version>1.0.1.Final</hibernate.jpa2.version>
 		<hibernate.validator.version>4.1.0.Final</hibernate.validator.version>
-		<jetty.version>6.1.26</jetty.version>
+		<jetty.version>7.5.4.v20111024</jetty.version>
 		<joda-time.version>2.0</joda-time.version>
 		<joda-time-hibernate.version>1.3</joda-time-hibernate.version>
 		<logback.version>0.9.29</logback.version>
