--- a/pom.xml
+++ b/pom.xml
@@ -1,4 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>br.com.objectos</groupId>
 	<artifactId>objectos-comuns-parent</artifactId>
@@ -10,6 +11,7 @@
 		<developerConnection>scm:git:git@github.com:objectos/objectos-comuns-parent.git</developerConnection>
 	</scm>
 	<properties>
+		<caucho.resin.version>3.2.1</caucho.resin.version>
 		<eclipse.lifecycle-mapping.version>1.0.0</eclipse.lifecycle-mapping.version>
 		<google.guava.version>10.0.1</google.guava.version>
 		<google.guice.version>3.0</google.guice.version>
@@ -21,6 +23,7 @@
 		<joda-time.version>2.0</joda-time.version>
 		<joda-time-hibernate.version>1.3</joda-time-hibernate.version>
 		<logback.version>0.9.29</logback.version>
+		<maven.antrun.version>1.6</maven.antrun.version>
 		<maven.cobertura.version>2.5.1</maven.cobertura.version>
 		<maven.compiler.version>2.3.2</maven.compiler.version>
 		<maven.enforcer.version>1.0.1</maven.enforcer.version>
@@ -116,6 +119,51 @@
 			</build>
 		</profile>
 		<profile>
+			<id>jetty</id>
+			<build>
+				<pluginManagement>
+					<plugins>
+						<plugin>
+							<groupId>org.apache.maven.plugins</groupId>
+							<artifactId>maven-antrun-plugin</artifactId>
+							<version>${maven.antrun.version}</version>
+							<executions>
+								<execution>
+									<id>deploy</id>
+									<phase>install</phase>
+									<goals>
+										<goal>run</goal>
+									</goals>
+									<configuration>
+										<target>
+
+											<copy
+												file="${project.build.directory}/${project.artifactId}-${project.version}.war"
+												tofile="${jetty.home}/webapps/${project.artifactId}.war.${project.version}"
+												overwrite="true" />
+
+											<copy file="${basedir}/resources/jetty-context.xml"
+												tofile="${jetty.home}/contexts/${project.artifactId}.xml"
+												overwrite="true">
+
+												<filterset>
+													<filter token="jetty.contextPath" value="${project.contextPath}" />
+													<filter token="jetty.war"
+														value="${project.artifactId}.war.${project.version}" />
+												</filterset>
+
+											</copy>
+
+										</target>
+									</configuration>
+								</execution>
+							</executions>
+						</plugin>
+					</plugins>
+				</pluginManagement>
+			</build>
+		</profile>
+		<profile>
 			<id>release</id>
 			<distributionManagement>
 				<repository>
@@ -152,22 +200,23 @@
 		<pluginManagement>
 			<plugins>
 				<plugin>
-					<groupId>com.googlecode.flyway</groupId>
-					<artifactId>flyway-maven-plugin</artifactId>
-					<version>${googlecode.flyway.version}</version>
-					<configuration>
-						<driver>${jdbc.driver}</driver>
-						<url>${jdbc.url}</url>
-						<user>${jdbc.user}</user>
-						<password>${jdbc.password}</password>
-					</configuration>
-					<dependencies>
-						<dependency>
-							<groupId>mysql</groupId>
-							<artifactId>mysql-connector-java</artifactId>
-							<version>${mysql.connector.version}</version>
-						</dependency>
-					</dependencies>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-antrun-plugin</artifactId>
+					<version>${maven.antrun.version}</version>
+					<executions>
+						<execution>
+							<id>schema</id>
+							<phase>process-resources</phase>
+							<goals>
+								<goal>run</goal>
+							</goals>
+							<configuration>
+								<target>
+									<touch file="${schema.dir.name}/${schema.file.name}" />
+								</target>
+							</configuration>
+						</execution>
+					</executions>
 				</plugin>
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
@@ -183,6 +232,11 @@
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-jar-plugin</artifactId>
 					<version>${maven.jar.version}</version>
+				</plugin>
+				<plugin>
+					<groupId>org.mortbay.jetty</groupId>
+					<artifactId>jetty-maven-plugin</artifactId>
+					<version>${jetty.version}</version>
 				</plugin>
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
@@ -244,6 +298,35 @@
 					</configuration>
 				</plugin>
 				<plugin>
+					<groupId>com.googlecode.flyway</groupId>
+					<artifactId>flyway-maven-plugin</artifactId>
+					<version>${googlecode.flyway.version}</version>
+					<configuration>
+						<baseDir>db/migration/${project.artifactId}</baseDir>
+						<driver>${jdbc.driver}</driver>
+						<url>${jdbc.baseUrl}/${jdbc.db}</url>
+						<user>${jdbc.user}</user>
+						<password>${jdbc.password}</password>
+					</configuration>
+					<executions>
+						<execution>
+							<id>schema</id>
+							<phase>process-resources</phase>
+							<goals>
+								<goal>init</goal>
+								<goal>migrate</goal>
+							</goals>
+						</execution>
+					</executions>
+					<dependencies>
+						<dependency>
+							<groupId>mysql</groupId>
+							<artifactId>mysql-connector-java</artifactId>
+							<version>${mysql.connector.version}</version>
+						</dependency>
+					</dependencies>
+				</plugin>
+				<plugin>
 					<groupId>org.codehaus.mojo</groupId>
 					<artifactId>sql-maven-plugin</artifactId>
 					<version>${maven.sql.version}</version>
@@ -253,6 +336,21 @@
 						<username>${jdbc.user}</username>
 						<password>${jdbc.password}</password>
 					</configuration>
+					<executions>
+						<execution>
+							<id>schema</id>
+							<phase>process-resources</phase>
+							<goals>
+								<goal>execute</goal>
+							</goals>
+							<configuration>
+								<url>${jdbc.baseUrl}</url>
+								<autocommit>false</autocommit>
+								<sqlCommand>create database if not exists ${jdbc.db} character
+									set utf8</sqlCommand>
+							</configuration>
+						</execution>
+					</executions>
 					<dependencies>
 						<dependency>
 							<groupId>mysql</groupId>
@@ -271,10 +369,36 @@
 								<pluginExecution>
 									<pluginExecutionFilter>
 										<groupId>org.apache.maven.plugins</groupId>
+										<artifactId>maven-antrun-plugin</artifactId>
+										<versionRange>[${maven.antrun.version},)</versionRange>
+										<goals>
+											<goal>run</goal>
+										</goals>
+									</pluginExecutionFilter>
+									<action>
+										<ignore />
+									</action>
+								</pluginExecution>
+								<pluginExecution>
+									<pluginExecutionFilter>
+										<groupId>org.apache.maven.plugins</groupId>
 										<artifactId>maven-enforcer-plugin</artifactId>
 										<versionRange>[${maven.enforcer.version},)</versionRange>
 										<goals>
 											<goal>enforce</goal>
+										</goals>
+									</pluginExecutionFilter>
+									<action>
+										<ignore />
+									</action>
+								</pluginExecution>
+								<pluginExecution>
+									<pluginExecutionFilter>
+										<groupId>org.apache.maven.plugins</groupId>
+										<artifactId>maven-jar-plugin</artifactId>
+										<versionRange>[${maven.jar.version},)</versionRange>
+										<goals>
+											<goal>jar</goal>
 										</goals>
 									</pluginExecutionFilter>
 									<action>
