--- a/pom.xml
+++ b/pom.xml
@@ -43,8 +43,9 @@
 		<objectos.comuns.io.version>2.0.3</objectos.comuns.io.version>
 		<objectos.comuns.jdbc.version>2.0.34</objectos.comuns.jdbc.version>
 		<objectos.comuns.jgravatar.version>1.0.0</objectos.comuns.jgravatar.version>
+		<objectos.comuns.relational.version>2.0.5</objectos.comuns.relational.version>
 		<objectos.comuns.sitebricks.version>2.0.32</objectos.comuns.sitebricks.version>
-		<objectos.comuns.sqlunit.version>2.0.1</objectos.comuns.sqlunit.version>
+		<objectos.comuns.sqlunit.version>2.0.3</objectos.comuns.sqlunit.version>
 		<org.hamcrest.version>1.3</org.hamcrest.version>
 		<org.slf4j.version>1.6.1</org.slf4j.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
