--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,7 @@
 		<net.sf.ehcache.version>2.2.0</net.sf.ehcache.version>
 		<objectos.comuns.attachment.version>2.0.0</objectos.comuns.attachment.version>
 		<objectos.comuns.base.version>2.0.16</objectos.comuns.base.version>
+		<objectos.comuns.cron.version>2.0.0</objectos.comuns.cron.version>
 		<objectos.comuns.dbunit.version>2.0.7</objectos.comuns.dbunit.version>
 		<objectos.comuns.fileupload.version>2.0.0</objectos.comuns.fileupload.version>
 		<objectos.comuns.io.version>2.0.3</objectos.comuns.io.version>
