--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
 		<google.guava.version>13.0</google.guava.version>
 		<google.guice.version>3.0</google.guice.version>
 		<google.jsr305.version>1.3.9</google.jsr305.version>
-		<googlecode.flyway.version>1.4.2</googlecode.flyway.version>
+		<googlecode.flyway.version>1.7</googlecode.flyway.version>
 		<hibernate.core.version>3.6.6.Final</hibernate.core.version>
 		<hibernate.jpa2.version>1.0.1.Final</hibernate.jpa2.version>
 		<hibernate.validator.version>4.1.0.Final</hibernate.validator.version>
@@ -77,54 +77,6 @@
 						<configuration>
 							<argLine>-Dsun.lang.ClassLoader.allowArraySyntax=true</argLine>
 						</configuration>
-					</plugin>
-				</plugins>
-			</build>
-		</profile>
-		<profile>
-			<id>hbm2ddl</id>
-			<build>
-				<resources>
-					<resource>
-						<directory>resources/hbm2ddl</directory>
-					</resource>
-				</resources>
-				<plugins>
-					<plugin>
-						<groupId>org.codehaus.mojo</groupId>
-						<artifactId>hibernate3-maven-plugin</artifactId>
-						<version>2.2</version>
-						<configuration>
-							<componentProperties>
-								<implementation>jpaconfiguration</implementation>
-								<persistenceunit>hbm2ddl</persistenceunit>
-								<export>false</export>
-								<scan-classes>true</scan-classes>
-								<outputfilename>sql.ddl</outputfilename>
-							</componentProperties>
-						</configuration>
-						<dependencies>
-							<dependency>
-								<groupId>xerces</groupId>
-								<artifactId>xercesImpl</artifactId>
-								<version>2.9.1</version>
-							</dependency>
-							<dependency>
-								<groupId>org.hibernate</groupId>
-								<artifactId>hibernate-core</artifactId>
-								<version>${hibernate.core.version}</version>
-							</dependency>
-							<dependency>
-								<groupId>org.hibernate</groupId>
-								<artifactId>hibernate-entitymanager</artifactId>
-								<version>${hibernate.core.version}</version>
-							</dependency>
-							<dependency>
-								<groupId>org.hibernate</groupId>
-								<artifactId>hibernate-validator</artifactId>
-								<version>${hibernate.validator.version}</version>
-							</dependency>
-						</dependencies>
 					</plugin>
 				</plugins>
 			</build>
@@ -204,24 +156,6 @@
 	<build>
 		<pluginManagement>
 			<plugins>
-				<plugin>
-					<groupId>org.apache.maven.plugins</groupId>
-					<artifactId>maven-antrun-plugin</artifactId>
-					<version>${maven.antrun.version}</version>
-					<executions>
-						<execution>
-							<id>schema</id>
-							<goals>
-								<goal>run</goal>
-							</goals>
-							<configuration>
-								<target>
-									<touch file="${schema.dir.name}/${schema.file.name}" />
-								</target>
-							</configuration>
-						</execution>
-					</executions>
-				</plugin>
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-compiler-plugin</artifactId>
@@ -306,7 +240,12 @@
 					<artifactId>flyway-maven-plugin</artifactId>
 					<version>${googlecode.flyway.version}</version>
 					<configuration>
-						<baseDir>db/migration/${project.artifactId}</baseDir>
+						<baseDir>disabled</baseDir>
+						<basePackage>disabled</basePackage>
+						<disableInitCheck>true</disableInitCheck>
+						<locations>
+							<location>db/migration/${project.artifactId}</location>
+						</locations>
 						<driver>${jdbc.driver}</driver>
 						<url>${jdbc.baseUrl}/${jdbc.db}</url>
 						<user>${jdbc.user}</user>
@@ -316,7 +255,6 @@
 						<execution>
 							<id>schema</id>
 							<goals>
-								<goal>init</goal>
 								<goal>migrate</goal>
 							</goals>
 						</execution>
