--- a/pom.xml
+++ b/pom.xml
@@ -37,10 +37,11 @@
 		<mysql.connector.version>5.1.21</mysql.connector.version>
 		<net.sf.ehcache.version>2.2.0</net.sf.ehcache.version>
 		<objectos.comuns.attachment.version>2.0.0</objectos.comuns.attachment.version>
-		<objectos.comuns.base.version>2.0.17</objectos.comuns.base.version>
-		<objectos.comuns.cli.version>2.0.0</objectos.comuns.cli.version>
+		<objectos.comuns.base.version>2.0.18</objectos.comuns.base.version>
+		<objectos.comuns.cli.version>2.0.1</objectos.comuns.cli.version>
 		<objectos.comuns.cron.version>2.0.0</objectos.comuns.cron.version>
 		<objectos.comuns.dbunit.version>2.0.7</objectos.comuns.dbunit.version>
+		<objectos.comuns.etc.version>2.0.0</objectos.comuns.etc.version>
 		<objectos.comuns.fileupload.version>2.0.0</objectos.comuns.fileupload.version>
 		<objectos.comuns.io.version>2.0.3</objectos.comuns.io.version>
 		<objectos.comuns.jdbc.version>2.0.34</objectos.comuns.jdbc.version>
@@ -50,7 +51,9 @@
 		<objectos.comuns.sqlunit.version>2.0.4</objectos.comuns.sqlunit.version>
 		<objectos.comuns.wkhtmltopdf.version>2.0.0</objectos.comuns.wkhtmltopdf.version>
 		<org.hamcrest.version>1.3</org.hamcrest.version>
+		<org.mvel.version>2.1.Beta6</org.mvel.version>
 		<org.slf4j.version>1.6.1</org.slf4j.version>
+		<org.yaml.version>1.10</org.yaml.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<testng.version>6.7</testng.version>
 	</properties>
