--- a/pom.xml
+++ b/pom.xml
@@ -36,7 +36,7 @@
 		<maven.war.version>2.1.1</maven.war.version>
 		<mysql.connector.version>5.1.21</mysql.connector.version>
 		<net.sf.ehcache.version>2.2.0</net.sf.ehcache.version>
-		<objectos.comuns.attachment.version>2.0.0</objectos.comuns.attachment.version>
+		<objectos.comuns.attachment.version>2.0.1</objectos.comuns.attachment.version>
 		<objectos.comuns.base.version>2.0.20</objectos.comuns.base.version>
 		<objectos.comuns.cli.version>2.0.1</objectos.comuns.cli.version>
 		<objectos.comuns.cnab.version>2.0.1</objectos.comuns.cnab.version>
@@ -51,10 +51,12 @@
 		<objectos.comuns.sitebricks.version>2.0.32</objectos.comuns.sitebricks.version>
 		<objectos.comuns.sqlunit.version>2.0.4</objectos.comuns.sqlunit.version>
 		<objectos.comuns.wkhtmltopdf.version>2.0.0</objectos.comuns.wkhtmltopdf.version>
+		<org.imgscalr.version>4.2</org.imgscalr.version>
 		<org.hamcrest.version>1.3</org.hamcrest.version>
 		<org.mvel.version>2.1.Beta6</org.mvel.version>
 		<org.slf4j.version>1.6.1</org.slf4j.version>
 		<org.yaml.version>1.10</org.yaml.version>
+		<pdf-renderer.version>1.8</pdf-renderer.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<testng.version>6.7</testng.version>
 	</properties>
