--- a/pom.xml
+++ b/pom.xml
@@ -36,7 +36,7 @@
 		<maven.war.version>2.1.1</maven.war.version>
 		<mysql.connector.version>5.1.21</mysql.connector.version>
 		<net.sf.ehcache.version>2.2.0</net.sf.ehcache.version>
-		<objectos.comuns.attachment.version>2.0.1</objectos.comuns.attachment.version>
+		<objectos.comuns.attachment.version>2.0.2-SNAPSHOT</objectos.comuns.attachment.version>
 		<objectos.comuns.base.version>2.0.20</objectos.comuns.base.version>
 		<objectos.comuns.cli.version>2.0.1</objectos.comuns.cli.version>
 		<objectos.comuns.cnab.version>2.0.1</objectos.comuns.cnab.version>
