--- a/objectos-comuns-jdbc/pom.xml
+++ b/objectos-comuns-jdbc/pom.xml
@@ -7,7 +7,7 @@
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>objectos-comuns-jdbc</artifactId>
-	<name>objectos comuns :: relational :: JDBC</name>
+	<name>objectos :: comuns :: relational :: JDBC</name>
 	<scm>
 		<connection>scm:git:git://objectos/objectos-comuns-jdbc.git</connection>
 		<developerConnection>scm:git:git@github.com:objectos/objectos-comuns-jdbc.git</developerConnection>
