--- a/pom.xml
+++ b/pom.xml
@@ -9,14 +9,14 @@
 		<connection>scm:git:git://objectos/objectos-comuns-parent.git</connection>
 		<developerConnection>scm:git:git@github.com:objectos/objectos-comuns-parent.git</developerConnection>
 	</scm>
-    <modules>
-        <module>objectos-comuns-attachment</module>
-        <module>objectos-comuns-base</module>
-        <module>objectos-comuns-cnab</module>
-        <module>objectos-comuns-fileupload</module>
-        <module>objectos-comuns-jdbc</module>
-        <module>objectos-comuns-sitebricks</module>
-    </modules>
+	<modules>
+		<module>objectos-comuns-attachment</module>
+		<module>objectos-comuns-base</module>
+		<module>objectos-comuns-cnab</module>
+		<module>objectos-comuns-fileupload</module>
+		<module>objectos-comuns-jdbc</module>
+		<module>objectos-comuns-sitebricks</module>
+	</modules>
 	<properties>
 		<caucho.resin.version>3.2.1</caucho.resin.version>
 		<eclipse.lifecycle-mapping.version>1.0.0</eclipse.lifecycle-mapping.version>
@@ -42,6 +42,7 @@
 		<maven.sql.version>1.5</maven.sql.version>
 		<maven.surefire.version>2.8.1</maven.surefire.version>
 		<maven.war.version>2.1.1</maven.war.version>
+		<mustache.java.version>0.8.7</mustache.java.version>
 		<mysql.connector.version>5.1.21</mysql.connector.version>
 		<net.sf.ehcache.version>2.2.0</net.sf.ehcache.version>
 		<objectos.comuns.version>3.0-SNAPSHOT</objectos.comuns.version>
