--- a/objectos-comuns-uno/pom.xml
+++ b/objectos-comuns-uno/pom.xml
@@ -17,30 +17,29 @@
   <properties>
   	<uno.path>/usr/lib64/openoffice/program/</uno.path>
   </properties>
+  <build>
+    <resources>
+      <resource>
+        <directory>${basedir}/src/main/resources</directory>
+        <includes>
+          <include>uno.properties</include>
+        </includes>
+		<filtering>true</filtering>
+      </resource>
+    </resources>
+  </build>
   <dependencies>
+  <dependency>
+      <groupId>com.itextpdf</groupId>
+      <artifactId>itextpdf</artifactId>
+      <version>5.1.3</version>
+      <type>jar</type>
+    </dependency>
     <dependency>
-      <groupId>org.openoffice</groupId>
-      <artifactId>juh</artifactId>
-      <version>${uno.version}</version>
-      <scope>compile</scope>
-  </dependency>
-  <dependency>
-      <groupId>org.openoffice</groupId>
-      <artifactId>jurt</artifactId>
-      <version>${uno.version}</version>
-      <scope>compile</scope>
-  </dependency>
-  <dependency>
-      <groupId>org.openoffice</groupId>
-      <artifactId>ridl</artifactId>
-      <version>${uno.version}</version>
-      <scope>compile</scope>
-  </dependency>
-   <dependency>
-    <groupId>org.openoffice</groupId>
-    <artifactId>unoil</artifactId>
-      <version>${uno.version}</version>
-    <scope>compile</scope>
-  </dependency>
+      <groupId>com.itextpdf.tool</groupId>
+      <artifactId>xmlworker</artifactId>
+      <version>1.1.1</version>
+      <type>jar</type>
+    </dependency>
   </dependencies>
 </project>
