--- a/pom.xml
+++ b/pom.xml
@@ -14,10 +14,10 @@
 		<module>objectos-comuns-attachment</module>
 		<module>objectos-comuns-base</module>
 		<module>objectos-comuns-cnab</module>
+	    <module>objectos-comuns-documentos</module>
 		<module>objectos-comuns-fileupload</module>
 		<module>objectos-comuns-jdbc</module>
 		<module>objectos-comuns-sitebricks</module>
-	    <module>objectos-comuns-uno</module>
   </modules>
 	<properties>
 		<caucho.resin.version>3.2.1</caucho.resin.version>
