--- a/objectos-comuns-fileupload/pom.xml
+++ b/objectos-comuns-fileupload/pom.xml
@@ -1,17 +1,14 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>br.com.objectos</groupId>
 		<artifactId>objectos-comuns-parent</artifactId>
-        <version>2.99.0-SNAPSHOT</version>
-        <relativePath>..</relativePath>
+		<version>2.99.0-SNAPSHOT</version>
+		<relativePath>..</relativePath>
 	</parent>
 	<artifactId>objectos-comuns-fileupload</artifactId>
 	<name>objectos :: comuns :: web :: fileupload</name>
-	<scm>
-		<connection>scm:git:git://objectos/objectos-comuns-fileupload.git</connection>
-		<developerConnection>scm:git:git@github.com:objectos/objectos-comuns-fileupload.git</developerConnection>
-	</scm>
 	<properties>
 		<apache.fileupload.version>1.2.2</apache.fileupload.version>
 		<javax.servlet-api.version>2.5</javax.servlet-api.version>
@@ -20,7 +17,7 @@
 		<dependency>
 			<groupId>br.com.objectos</groupId>
 			<artifactId>objectos-comuns-base</artifactId>
-			<version>${objectos.comuns.base.version}</version>
+			<version>${project.version}</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
