--- a/objectos-comuns-cnab/pom.xml
+++ b/objectos-comuns-cnab/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<groupId>br.com.objectos</groupId>
 		<artifactId>objectos-comuns-parent</artifactId>
-		<version>2.99.1-SNAPSHOT</version>
+		<version>2.99.1</version>
 		<relativePath>..</relativePath>
 	</parent>
 	<artifactId>objectos-comuns-cnab</artifactId>
