--- a/objectos-comuns-jdbc/pom.xml
+++ b/objectos-comuns-jdbc/pom.xml
@@ -2,7 +2,7 @@
 	<parent>
 		<artifactId>objectos-comuns-parent</artifactId>
 		<groupId>br.com.objectos</groupId>
-		<version>2.99.2-SNAPSHOT</version>
+		<version>2.99.2</version>
 		<relativePath>..</relativePath>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
