--- a/objectos-comuns-dbunit/pom.xml
+++ b/objectos-comuns-dbunit/pom.xml
@@ -19,7 +19,7 @@
 		<dependency>
 			<groupId>${project.groupId}</groupId>
 			<artifactId>objectos-comuns-base</artifactId>
-			<version>${objectos.comuns.base.version}</version>
+			<version>${project.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.dbunit</groupId>
